--- a/exercise-tracker/mern-exercise-tracker/backend/package.json
+++ b/exercise-tracker/mern-exercise-tracker/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix mern-exercise-tracker && npm run build --prefix mern-exercise-tracker"
   },
   "keywords": [],
   "author": "",
